# Reversi_with_several_remote_players-Client_side_for_server_with_thread_pool

./: AIEnemyGameFlow.cpp  AIEnemyGameFlow.h  AIPlayer.cpp  AIPlayer.h  AbstractGameLogic.h  Board.cpp  Board.h  CMakeLists.txt  Cell.cpp  Cell.h  DisplayGame.h  DisplayGameOnConsole.cpp  DisplayGameOnConsole.h  GameFlow.h  GameLogic.cpp  GameLogic.h  HumanEnemyGameFlow.cpp  HumanEnemyGameFlow.h  HumanPlayer.cpp  HumanPlayer.h  Player.h  Point.h  RemoteEnemyGameFlow.cpp  RemoteEnemyGameFlow.h  RemotePlayer.cpp  RemotePlayer.h  main.cpp
Tests/: AIEnemyGameFlowTest.cpp  AIEnemyGameFlowTest.h  AIPlayerTest.cpp  AIPlayerTest.h  GameLogicTest.cpp  GameLogicTest.h  HumanEnemyGameFlowTest.cpp  HumanEnemyGameFlowTest.h  main.cpp
